--- a/css/typography.css
+++ b/css/typography.css
@@ -9,9 +9,7 @@ body, table, input, textarea, button {
 
 body {
     height: 100%;
-    margin: 0 auto;
-    max-width: 72rem;
-    padding: 4rem 2rem;
+    padding: 4rem 0;
     background: #1d1f21;
     display: grid;
     grid-template-rows: auto 1fr auto;
