--- a/css/footer.css
+++ b/css/footer.css
@@ -2,6 +2,7 @@
     bottom: 0;
     color: #666;
     font-size: 11px;
+    margin-top: 3rem;
     margin-bottom: 10px;
     text-align: center;
     vertical-align: top;
