--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /*Globals*/
 
-.title, .subtitle {
+.title,
+.subtitle {
     letter-spacing: .02em;
 }
 
@@ -17,6 +18,9 @@
     font-size: 1.5em;
     margin-bottom: 1rem;
     font-weight: 700;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 i.hoverable {
@@ -32,7 +36,7 @@ i.hoverable:hover {
 }
 
 .underline {
-    background-image: linear-gradient(transparent,transparent 5px,#c9cacc 0,#c9cacc);
+    background-image: linear-gradient(transparent, transparent 5px, #c9cacc 0, #c9cacc);
     background-position: bottom;
     background-repeat: repeat-x;
     background-size: 100% 6px;
@@ -41,7 +45,7 @@ i.hoverable:hover {
 }
 
 .underline:hover {
-    background-image: linear-gradient(transparent,transparent 4px,#d480aa 0,#d480aa);
+    background-image: linear-gradient(transparent, transparent 4px, #d480aa 0, #d480aa);
 }
 
 /*site-header*/
@@ -128,4 +132,50 @@ i.hoverable:hover {
     line-height: 22px;
     overflow-x: auto;
     padding: 0 5px;
+}
+
+.cv-btn {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    gap: 0.5rem;
+    border: none;
+    width: max-content;
+    transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+    -webkit-backdrop-filter: blur(32px);
+    backdrop-filter: blur(32px);
+    border-radius: 100px;
+    font-weight: 800;
+    place-content: center;
+
+    padding: 0.75rem 2.5rem 0.75rem 1rem;
+    font-size: 0.825rem;
+    line-height: 1rem;
+
+    background-color: rgba(255, 255, 255, 0.08);
+    box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.04),
+        inset 0 0 0 1px rgba(255, 255, 255, 0.04);
+    color: #fff;
+}
+
+.cv-btn:hover {
+    box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.08),
+        inset 0 0 0 1px rgba(252, 232, 3, 0.08);
+    color: #2bbc8a;
+    transform: translate(0, -0.25rem);
+    background-color: rgba(255, 255, 255, 0.16);
+}
+
+.cv-btn .icon {
+    right: 0;
+    transition: all 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
+    fill: #c9cacc;
+    width: 32px;
+    position: absolute;
+}
+
+.cv-btn:hover .icon {
+    fill: #2bbc8a;
 }
